@@ -1,33 +1,31 @@
 package heartbeat.service.board.jira;
 
-import heartbeat.exception.BaseException;
-import heartbeat.exception.InternalServerErrorException;
-
-import static java.util.Objects.isNull;
-import static java.util.Objects.nonNull;
-
 import com.google.gson.Gson;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import com.google.gson.JsonPrimitive;
+import com.google.gson.reflect.TypeToken;
 import heartbeat.client.JiraFeignClient;
 import heartbeat.client.component.JiraUriGenerator;
-import heartbeat.client.dto.board.jira.AllDoneCardsResponseDTO;
+import heartbeat.client.dto.board.jira.AllCardsResponseDTO;
+import heartbeat.client.dto.board.jira.Assignee;
 import heartbeat.client.dto.board.jira.CardHistoryResponseDTO;
 import heartbeat.client.dto.board.jira.FieldResponseDTO;
 import heartbeat.client.dto.board.jira.HistoryDetail;
 import heartbeat.client.dto.board.jira.IssueField;
 import heartbeat.client.dto.board.jira.Issuetype;
-import heartbeat.client.dto.board.jira.JiraCardWithFields;
 import heartbeat.client.dto.board.jira.JiraBoardConfigDTO;
+import heartbeat.client.dto.board.jira.JiraBoardVerifyDTO;
 import heartbeat.client.dto.board.jira.JiraCard;
+import heartbeat.client.dto.board.jira.JiraCardWithFields;
 import heartbeat.client.dto.board.jira.JiraColumn;
 import heartbeat.client.dto.board.jira.Sprint;
 import heartbeat.client.dto.board.jira.StatusSelfDTO;
 import heartbeat.controller.board.dto.request.BoardRequestParam;
 import heartbeat.controller.board.dto.request.BoardType;
+import heartbeat.controller.board.dto.request.BoardVerifyRequestParam;
 import heartbeat.controller.board.dto.request.CardStepsEnum;
 import heartbeat.controller.board.dto.request.RequestJiraBoardColumnSetting;
 import heartbeat.controller.board.dto.request.StoryPointsAndCycleTimeRequest;
@@ -44,16 +42,30 @@ import heartbeat.controller.board.dto.response.StatusChangedItem;
 import heartbeat.controller.board.dto.response.StepsDay;
 import heartbeat.controller.board.dto.response.TargetField;
 import heartbeat.exception.BadRequestException;
+import heartbeat.exception.BaseException;
+import heartbeat.exception.InternalServerErrorException;
 import heartbeat.exception.NoContentException;
+import heartbeat.exception.NotFoundException;
+import heartbeat.exception.PermissionDenyException;
 import heartbeat.util.BoardUtil;
+import heartbeat.util.SystemUtil;
 import jakarta.annotation.PreDestroy;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.log4j.Log4j2;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor;
+import org.springframework.stereotype.Service;
+import org.springframework.util.CollectionUtils;
 
+import java.lang.reflect.Type;
 import java.net.URI;
+import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
-import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -64,10 +76,9 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
-import lombok.RequiredArgsConstructor;
-import lombok.extern.log4j.Log4j2;
-import org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor;
-import org.springframework.stereotype.Service;
+import static java.lang.Long.parseLong;
+import static java.util.Objects.isNull;
+import static java.util.Objects.nonNull;
 
 @Service
 @RequiredArgsConstructor
@@ -78,10 +89,14 @@ public class JiraService {
 
 	public static final int QUERY_COUNT = 100;
 
+	public static final int NONE_DONE_MAX_QUERY_COUNT = 50;
+
 	public static final List<String> FIELDS_IGNORE = List.of("summary", "description", "attachment", "duedate",
-			"issuelinks");
+			"issuelinks", "Development", "Start date", "Rank", "Issue color");
 
 	private static final String DONE_CARD_TAG = "done";
+
+	private static final String NONE_DONE_CARD_TAG = "nonDone";
 
 	private final ThreadPoolTaskExecutor customTaskExecutor;
 
@@ -91,46 +106,122 @@ public class JiraService {
 
 	private final BoardUtil boardUtil;
 
+	private final SystemUtil systemUtil;
+
+	private static final String STORY_POINT_KEY = "STORY_POINT_KEY";
+
 	@PreDestroy
 	public void shutdownExecutor() {
 		customTaskExecutor.shutdown();
 	}
 
-	public BoardConfigDTO getJiraConfiguration(BoardType boardType, BoardRequestParam boardRequestParam) {
+	public String verify(BoardType boardType, BoardVerifyRequestParam boardVerifyRequestParam) {
+		URI baseUrl = urlGenerator.getUri(boardVerifyRequestParam.getSite());
+		if (!BoardType.JIRA.equals(boardType)) {
+			throw new BadRequestException("boardType param is not correct");
+		}
+
+		try {
+			JiraBoardVerifyDTO jiraBoardVerifyDTO = jiraFeignClient.getBoard(baseUrl,
+					boardVerifyRequestParam.getBoardId(), boardVerifyRequestParam.getToken());
+			return jiraBoardVerifyDTO.getLocation().getProjectKey();
+		}
+		catch (NotFoundException e) {
+			log.error("Failed to call Jira to verify board url, url: {}", baseUrl);
+			throw new NotFoundException("boardId is incorrect");
+		}
+		catch (RuntimeException e) {
+			Throwable cause = Optional.ofNullable(e.getCause()).orElse(e);
+			log.error("Failed to call Jira to verify board, board id: {}, e: {}", boardVerifyRequestParam.getBoardId(),
+					cause.getMessage());
+			if (cause instanceof BaseException baseException) {
+				throw baseException;
+			}
+			throw new InternalServerErrorException(
+					String.format("Failed to call Jira to verify board, cause is %s", cause.getMessage()));
+		}
+	}
+
+	public BoardConfigDTO getInfo(BoardType boardType, BoardRequestParam boardRequestParam) {
 		URI baseUrl = urlGenerator.getUri(boardRequestParam.getSite());
 		try {
-			JiraBoardConfigDTO jiraBoardConfigDTO = getJiraBoardConfig(baseUrl, boardRequestParam.getBoardId(),
-					boardRequestParam.getToken());
-			CompletableFuture<List<TargetField>> targetFieldFuture = getTargetFieldAsync(baseUrl, boardRequestParam);
-			CompletableFuture<JiraColumnResult> jiraColumnsFuture = getJiraColumnsAsync(boardRequestParam, baseUrl,
-					jiraBoardConfigDTO);
+			if (!BoardType.JIRA.equals(boardType)) {
+				throw new BadRequestException("boardType param is not correct");
+			}
+			String jiraBoardStyle = jiraFeignClient
+				.getProject(baseUrl, boardRequestParam.getProjectKey(), boardRequestParam.getToken())
+				.getStyle();
+			BoardType jiraBoardType = BoardType.fromStyle(jiraBoardStyle);
 
-			return jiraColumnsFuture.thenCombine(targetFieldFuture,
-					(jiraColumnResult,
-							targetFields) -> getUserAsync(boardType, baseUrl, boardRequestParam,
-									jiraColumnResult.getDoneColumns())
-								.thenApply(users -> BoardConfigDTO.builder()
-									.targetFields(targetFields)
-									.jiraColumnRespons(jiraColumnResult.getJiraColumnResponse())
-									.users(users)
-									.build())
-								.join())
+			Map<Boolean, List<TargetField>> partitions = getTargetFieldAsync(baseUrl, boardRequestParam).join()
+				.stream()
+				.collect(Collectors.partitioningBy(this::isIgnoredTargetField));
+			List<TargetField> ignoredTargetFields = partitions.get(true);
+			List<TargetField> neededTargetFields = partitions.get(false);
+
+			return getJiraColumnsAsync(boardRequestParam, baseUrl,
+					getJiraBoardConfig(baseUrl, boardRequestParam.getBoardId(), boardRequestParam.getToken()))
+				.thenCombine(getUserAsync(jiraBoardType, baseUrl, boardRequestParam),
+						(jiraColumnResult, users) -> BoardConfigDTO.builder()
+							.targetFields(neededTargetFields)
+							.jiraColumnResponse(jiraColumnResult.getJiraColumnResponse())
+							.ignoredTargetFields(ignoredTargetFields)
+							.users(users)
+							.build())
 				.join();
 		}
 		catch (RuntimeException e) {
 			Throwable cause = Optional.ofNullable(e.getCause()).orElse(e);
-			log.error("Failed when call Jira to get board config, project key: {}, board id: {}, e: {}",
+			log.error("Failed to call Jira to get board info, project key: {}, board id: {}, e: {}",
 					boardRequestParam.getBoardId(), boardRequestParam.getProjectKey(), cause.getMessage());
 			if (cause instanceof BaseException baseException) {
 				throw baseException;
 			}
 			throw new InternalServerErrorException(
-					String.format("Failed when call Jira to get board config, cause is %s", cause.getMessage()));
+					String.format("Failed to call Jira to get board info, cause is %s", cause.getMessage()));
 		}
 	}
 
-	public CardCollection getStoryPointsAndCycleTime(StoryPointsAndCycleTimeRequest request,
-			List<RequestJiraBoardColumnSetting> boardColumns, List<String> users) {
+	@Deprecated
+	public BoardConfigDTO getJiraConfiguration(BoardType boardType, BoardRequestParam boardRequestParam) {
+		URI baseUrl = urlGenerator.getUri(boardRequestParam.getSite());
+		try {
+
+			Map<Boolean, List<TargetField>> partitions = getTargetFieldAsync(baseUrl, boardRequestParam).join()
+				.stream()
+				.collect(Collectors.partitioningBy(this::isIgnoredTargetField));
+			List<TargetField> ignoredTargetFields = partitions.get(true);
+			List<TargetField> neededTargetFields = partitions.get(false);
+
+			return getJiraColumnsAsync(boardRequestParam, baseUrl,
+					getJiraBoardConfig(baseUrl, boardRequestParam.getBoardId(), boardRequestParam.getToken()))
+				.thenCombine(getUserAsync(boardType, baseUrl, boardRequestParam),
+						(jiraColumnResult, users) -> BoardConfigDTO.builder()
+							.targetFields(neededTargetFields)
+							.jiraColumnResponse(jiraColumnResult.getJiraColumnResponse())
+							.ignoredTargetFields(ignoredTargetFields)
+							.users(users)
+							.build())
+				.join();
+		}
+		catch (RuntimeException e) {
+			Throwable cause = Optional.ofNullable(e.getCause()).orElse(e);
+			log.error("Failed to call Jira to get board config, project key: {}, board id: {}, e: {}",
+					boardRequestParam.getBoardId(), boardRequestParam.getProjectKey(), cause.getMessage());
+			if (cause instanceof BaseException baseException) {
+				throw baseException;
+			}
+			throw new InternalServerErrorException(
+					String.format("Failed to call Jira to get board config, cause is %s", cause.getMessage()));
+		}
+	}
+
+	private boolean isIgnoredTargetField(TargetField targetField) {
+		return (FIELDS_IGNORE.contains(targetField.getKey())) || FIELDS_IGNORE.contains(targetField.getName());
+	}
+
+	public CardCollection getStoryPointsAndCycleTimeForDoneCards(StoryPointsAndCycleTimeRequest request,
+			List<RequestJiraBoardColumnSetting> boardColumns, List<String> users, String assigneeFilter) {
 		BoardType boardType = BoardType.fromValue(request.getType());
 		URI baseUrl = urlGenerator.getUri(request.getSite());
 		BoardRequestParam boardRequestParam = BoardRequestParam.builder()
@@ -143,57 +234,59 @@ public class JiraService {
 			.build();
 
 		JiraCardWithFields jiraCardWithFields = getAllDoneCards(boardType, baseUrl, request.getStatus(),
-				boardRequestParam);
+				boardRequestParam, request.getOverrideFields());
 		List<JiraCard> allDoneCards = jiraCardWithFields.getJiraCards();
-		List<JiraCardDTO> matchedCards = getMatchedCards(request, boardColumns, users, baseUrl, allDoneCards,
-				jiraCardWithFields.getTargetFields());
-		int storyPointSum = matchedCards.stream()
-			.mapToInt(card -> card.getBaseInfo().getFields().getStoryPoints())
+
+		for (RequestJiraBoardColumnSetting boardColumn : boardColumns) {
+			CardStepsEnum.fromValue(boardColumn.getValue());
+		}
+		List<JiraCardDTO> realDoneCards = getRealDoneCards(request, boardColumns, users, baseUrl, allDoneCards,
+				jiraCardWithFields.getTargetFields(), assigneeFilter);
+		double storyPointSum = realDoneCards.stream()
+			.mapToDouble(card -> card.getBaseInfo().getFields().getStoryPoints())
 			.sum();
 
 		return CardCollection.builder()
 			.storyPointSum(storyPointSum)
-			.cardsNumber(matchedCards.size())
-			.jiraCardDTOList(matchedCards)
+			.cardsNumber(realDoneCards.size())
+			.jiraCardDTOList(realDoneCards)
 			.build();
 	}
 
 	private CompletableFuture<JiraColumnResult> getJiraColumnsAsync(BoardRequestParam boardRequestParam, URI baseUrl,
 			JiraBoardConfigDTO jiraBoardConfigDTO) {
-		return CompletableFuture.supplyAsync(() -> getJiraColumns(boardRequestParam, baseUrl, jiraBoardConfigDTO),
-				customTaskExecutor);
+		return CompletableFuture.supplyAsync(() -> getJiraColumns(boardRequestParam, baseUrl, jiraBoardConfigDTO));
 	}
 
 	public JiraColumnResult getJiraColumns(BoardRequestParam boardRequestParam, URI baseUrl,
 			JiraBoardConfigDTO jiraBoardConfigDTO) {
-		log.info("Start to get jira columns, project key: {}, board id: {}, column size: {}",
+		log.info("Start to get jira columns, _projectKey: {}, _boardId: {}, _columnSize: {}",
 				boardRequestParam.getProjectKey(), boardRequestParam.getBoardId(),
 				jiraBoardConfigDTO.getColumnConfig().getColumns().size());
-		List<String> doneColumns = new CopyOnWriteArrayList<>();
+		List<String> jiraColumns = new CopyOnWriteArrayList<>();
 		List<CompletableFuture<JiraColumnDTO>> futures = jiraBoardConfigDTO.getColumnConfig()
 			.getColumns()
 			.stream()
 			.map(jiraColumn -> CompletableFuture.supplyAsync(
-					() -> getColumnNameAndStatus(jiraColumn, baseUrl, doneColumns, boardRequestParam.getToken()),
-					customTaskExecutor))
+					() -> getColumnNameAndStatus(jiraColumn, baseUrl, jiraColumns, boardRequestParam.getToken())))
 			.toList();
 
-		List<JiraColumnDTO> columnResponse = futures.stream().map(CompletableFuture::join).collect(Collectors.toList());
+		List<JiraColumnDTO> columnResponse = futures.stream().map(CompletableFuture::join).toList();
 
 		JiraColumnResult jiraColumnResult = JiraColumnResult.builder()
 			.jiraColumnResponse(columnResponse)
-			.doneColumns(doneColumns)
+			.jiraColumns(jiraColumns)
 			.build();
 		log.info(
-				"Successfully to get jira columns, project key: {}, board id: {}, column result size: {}, done columns: {}",
+				"Successfully get jira columns, _projectKey: {}, _boardId: {}, _columnResultSize: {}, _doneColumns: {}",
 				boardRequestParam.getProjectKey(), boardRequestParam.getBoardId(),
-				jiraColumnResult.getJiraColumnResponse().size(), doneColumns);
+				jiraColumnResult.getJiraColumnResponse().size(), jiraColumns);
 		return jiraColumnResult;
 	}
 
 	private JiraColumnDTO getColumnNameAndStatus(JiraColumn jiraColumn, URI baseUrl, List<String> doneColumns,
 			String token) {
-		log.info("Start to get column and status, the column name: {} column status: {}", jiraColumn.getName(),
+		log.info("Start to get column and status, _columnName: {}, _columnStatus: {}", jiraColumn.getName(),
 				jiraColumn.getStatuses());
 		List<StatusSelfDTO> statusSelfList = getStatusSelfList(baseUrl, jiraColumn, token);
 		String key = handleColumKey(doneColumns, statusSelfList);
@@ -204,25 +297,31 @@ public class JiraService {
 				.name(jiraColumn.getName())
 				.statuses(statusSelfList.stream()
 					.map(statusSelf -> statusSelf.getUntranslatedName().toUpperCase())
-					.collect(Collectors.toList()))
+					.toList())
 				.build())
 			.build();
-		log.info("Successfully get column and status, the column key: {}, status: {}", jiraColumnDTO.getKey(),
+		log.info("Successfully get column and status, _columnKey: {}, _status: {}", jiraColumnDTO.getKey(),
 				jiraColumnDTO.getValue().getStatuses());
 		return jiraColumnDTO;
 	}
 
 	private List<StatusSelfDTO> getStatusSelfList(URI baseUrl, JiraColumn jiraColumn, String token) {
-		log.info("Start to get columns status self list, column name: {}", jiraColumn.getName());
+		log.info("Start to get columns status self list, _columnName: {}", jiraColumn.getName());
 		List<CompletableFuture<StatusSelfDTO>> futures = jiraColumn.getStatuses()
 			.stream()
-			.map(jiraColumnStatus -> CompletableFuture.supplyAsync(
-					() -> jiraFeignClient.getColumnStatusCategory(baseUrl, jiraColumnStatus.getId(), token),
-					customTaskExecutor))
+			.map(jiraColumnStatus -> CompletableFuture
+				.supplyAsync(() -> jiraFeignClient.getColumnStatusCategory(baseUrl, jiraColumnStatus.getId(), token),
+						customTaskExecutor)
+				.exceptionally(e -> {
+					log.error(
+							"Failed to get Jira column status category, with  column name: {}, status: {} reason: {}:",
+							jiraColumn.getName(), jiraColumn.getStatuses(), e.getMessage());
+					return null;
+				}))
 			.toList();
-		log.info("Successfully get columns status self list, column name: {}", jiraColumn.getName());
+		log.info("Successfully get columns status self list, _columnName: {}", jiraColumn.getName());
 
-		return futures.stream().map(CompletableFuture::join).collect(Collectors.toList());
+		return futures.stream().map(CompletableFuture::join).filter(Objects::nonNull).toList();
 	}
 
 	private String handleColumKey(List<String> doneColumn, List<StatusSelfDTO> statusSelfList) {
@@ -241,26 +340,19 @@ public class JiraService {
 	}
 
 	private CompletableFuture<List<String>> getUserAsync(BoardType boardType, URI baseUrl,
-			BoardRequestParam boardRequestParam, List<String> doneColumns) {
-		return CompletableFuture.supplyAsync(() -> getUsers(boardType, baseUrl, boardRequestParam, doneColumns),
-				customTaskExecutor);
+			BoardRequestParam boardRequestParam) {
+		return CompletableFuture.supplyAsync(() -> getUsers(boardType, baseUrl, boardRequestParam));
 	}
 
-	private List<String> getUsers(BoardType boardType, URI baseUrl, BoardRequestParam boardRequestParam,
-			List<String> doneColumns) {
-		if (doneColumns.isEmpty()) {
-			throw new NoContentException("There is no done column.");
+	private List<String> getUsers(BoardType boardType, URI baseUrl, BoardRequestParam boardRequestParam) {
+		List<JiraCard> allCards = getAllCards(boardType, baseUrl, boardRequestParam).getJiraCards();
+
+		if (allCards.isEmpty()) {
+			throw new NoContentException("There is no cards.");
 		}
-
-		List<JiraCard> doneCards = getAllDoneCards(boardType, baseUrl, doneColumns, boardRequestParam).getJiraCards();
-
-		if (doneCards.isEmpty()) {
-			throw new NoContentException("There is no done cards.");
-		}
-
-		List<CompletableFuture<List<String>>> futures = doneCards.stream()
-			.map(doneCard -> CompletableFuture
-				.supplyAsync(() -> getAssigneeSet(baseUrl, doneCard, boardRequestParam.getToken()), customTaskExecutor))
+		List<CompletableFuture<List<String>>> futures = allCards.stream()
+			.map(jiraCard -> CompletableFuture
+				.supplyAsync(() -> getAssigneeSet(baseUrl, jiraCard, boardRequestParam.getToken()), customTaskExecutor))
 			.toList();
 
 		List<List<String>> assigneeList = futures.stream().map(CompletableFuture::join).toList();
@@ -268,36 +360,47 @@ public class JiraService {
 	}
 
 	private JiraCardWithFields getAllDoneCards(BoardType boardType, URI baseUrl, List<String> doneColumns,
-			BoardRequestParam boardRequestParam) {
+			BoardRequestParam boardRequestParam, List<TargetField> overrideFields) {
 		String jql = parseJiraJql(boardType, doneColumns, boardRequestParam);
 
-		return getCardList(baseUrl, boardRequestParam, jql, "done");
+		return getCardList(baseUrl, boardRequestParam, jql, "done", overrideFields, QUERY_COUNT);
 	}
 
-	private AllDoneCardsResponseDTO formatAllDoneCards(String allDoneCardResponse, List<TargetField> targetFields) {
-		Gson gson = new Gson();
-		AllDoneCardsResponseDTO allDoneCardsResponseDTO = gson.fromJson(allDoneCardResponse,
-				AllDoneCardsResponseDTO.class);
-		List<JiraCard> jiraCards = allDoneCardsResponseDTO.getIssues();
+	private JiraCardWithFields getAllCards(BoardType boardType, URI baseUrl, BoardRequestParam boardRequestParam) {
+		String jql;
+		if (BoardType.JIRA.equals(boardType) || BoardType.CLASSIC_JIRA.equals(boardType)) {
+			jql = String.format("status changed during (%s, %s)", boardRequestParam.getStartTime(),
+					boardRequestParam.getEndTime());
+		}
+		else {
+			throw new BadRequestException("boardType param is not correct");
+		}
+		return getCardList(baseUrl, boardRequestParam, jql, "all", null, QUERY_COUNT);
+	}
 
-		JsonArray elements = JsonParser.parseString(allDoneCardResponse)
-			.getAsJsonObject()
-			.get("issues")
-			.getAsJsonArray();
+	private AllCardsResponseDTO formatAllCards(String allCardResponse, List<TargetField> targetFields,
+			List<TargetField> overrideFields) {
+		Gson gson = new Gson();
+		AllCardsResponseDTO allCardsResponseDTO = gson.fromJson(allCardResponse, AllCardsResponseDTO.class);
+		List<JiraCard> jiraCards = allCardsResponseDTO.getIssues();
+
+		JsonArray elements = JsonParser.parseString(allCardResponse).getAsJsonObject().get("issues").getAsJsonArray();
 		List<Map<String, JsonElement>> customFieldMapList = new ArrayList<>();
-		ArrayList<Integer> storyPointList = new ArrayList<>();
-		ArrayList<Sprint> sprintList = new ArrayList<>();
+		ArrayList<Double> storyPointList = new ArrayList<>();
+		Map<String, Sprint> sprintMap = new HashMap<>();
 		Map<String, String> resultMap = targetFields.stream()
 			.collect(Collectors.toMap(TargetField::getKey, TargetField::getName));
-		CardCustomFieldKey cardCustomFieldKey = covertCustomFieldKey(targetFields);
+		CardCustomFieldKey cardCustomFieldKey = covertCustomFieldKey(targetFields, overrideFields);
 		for (JsonElement element : elements) {
 			JsonObject jsonElement = element.getAsJsonObject().get("fields").getAsJsonObject();
 			JsonElement storyPoints = jsonElement.getAsJsonObject().get(cardCustomFieldKey.getStoryPoints());
-			if (storyPoints == null || storyPoints.isJsonNull()) {
-				storyPointList.add(0);
+			if (storyPoints == null || storyPoints.isJsonNull() || cardCustomFieldKey.isInTargetField()) {
+				storyPointList.add(0.0);
 			}
 			else {
-				int storyPoint = jsonElement.getAsJsonObject().get(cardCustomFieldKey.getStoryPoints()).getAsInt();
+				Double storyPoint = jsonElement.getAsJsonObject()
+					.get(cardCustomFieldKey.getStoryPoints())
+					.getAsDouble();
 				storyPointList.add(storyPoint);
 			}
 			for (int index = 0; index < jiraCards.size(); index++) {
@@ -305,58 +408,67 @@ public class JiraService {
 					jiraCards.get(index).getFields().setStoryPoints(storyPointList.get(index));
 				}
 			}
-			Map<String, JsonElement> customFieldMap = new HashMap<>();
-			for (Map.Entry<String, String> entry : resultMap.entrySet()) {
-				String customFieldKey = entry.getKey();
-				String customFieldValue = entry.getValue();
-				if (jsonElement.has(customFieldKey)) {
-					JsonElement fieldValue = jsonElement.get(customFieldKey);
-					if (customFieldValue.equals("Sprint") && !fieldValue.isJsonNull() && fieldValue.isJsonArray()) {
-						JsonArray jsonArray = fieldValue.getAsJsonArray();
-						if (!jsonArray.isJsonNull() && jsonArray.size() > 0) {
-							JsonElement targetField = jsonArray.get(jsonArray.size() - 1);
-							Sprint sprint = gson.fromJson(targetField, Sprint.class);
-							sprintList.add(sprint);
-						}
-					}
-					else if (customFieldValue.equals("Story point estimate") && !fieldValue.isJsonNull()
-							&& fieldValue.isJsonPrimitive()) {
-						JsonPrimitive jsonPrimitive = fieldValue.getAsJsonPrimitive();
-						if (jsonPrimitive.isNumber()) {
-							Number numberValue = jsonPrimitive.getAsNumber();
-							int intValue = numberValue.intValue();
-							fieldValue = new JsonPrimitive(intValue);
-						}
-					}
-					else if (customFieldValue.equals("Flagged") && !fieldValue.isJsonNull()
-							&& fieldValue.isJsonArray()) {
-						JsonArray jsonArray = fieldValue.getAsJsonArray();
-						if (!jsonArray.isJsonNull() && jsonArray.size() > 0) {
-							JsonElement targetField = jsonArray.get(jsonArray.size() - 1);
-							fieldValue = targetField.getAsJsonObject().get("value");
-						}
-					}
-					customFieldMap.put(customFieldKey, fieldValue);
-				}
-			}
-			customFieldMapList.add(customFieldMap);
+			customFieldMapList.add(getCustomfieldMap(gson, sprintMap, resultMap, element, jsonElement));
 		}
 		for (int index = 0; index < customFieldMapList.size(); index++) {
-			allDoneCardsResponseDTO.getIssues().get(index).getFields().setCustomFields(customFieldMapList.get(index));
+			jiraCards.get(index).getFields().setCustomFields(customFieldMapList.get(index));
 		}
-		for (int index = 0; index < sprintList.size(); index++) {
-			allDoneCardsResponseDTO.getIssues().get(index).getFields().setSprint(sprintList.get(index));
+
+		for (JiraCard jiraCard : jiraCards) {
+			String key = jiraCard.getKey();
+			jiraCard.getFields().setSprint(sprintMap.get(key));
 		}
-		return allDoneCardsResponseDTO;
+		return allCardsResponseDTO;
+	}
+
+	private static Map<String, JsonElement> getCustomfieldMap(Gson gson, Map<String, Sprint> sprintMap,
+			Map<String, String> resultMap, JsonElement element, JsonObject jsonElement) {
+		Map<String, JsonElement> customFieldMap = new HashMap<>();
+		for (Map.Entry<String, String> entry : resultMap.entrySet()) {
+			String customFieldKey = entry.getKey();
+			String customFieldValue = entry.getValue();
+			if (jsonElement.has(customFieldKey)) {
+				JsonElement fieldValue = jsonElement.get(customFieldKey);
+				if (customFieldValue.equals("Sprint") && !fieldValue.isJsonNull() && fieldValue.isJsonArray()) {
+					JsonArray jsonArray = fieldValue.getAsJsonArray();
+					if (!jsonArray.isJsonNull() && !jsonArray.isEmpty()) {
+						Type listType = new TypeToken<List<Sprint>>() {
+						}.getType();
+						List<Sprint> sprints = gson.fromJson(jsonArray, listType);
+						sprints.sort(Comparator.comparing(Sprint::getCompleteDate,
+								Comparator.nullsLast(Comparator.comparing(ZonedDateTime::parse))));
+						sprintMap.put(element.getAsJsonObject().get("key").getAsString(),
+								sprints.get(sprints.size() - 1));
+					}
+				}
+				else if (customFieldValue.equals("Story point estimate") && !fieldValue.isJsonNull()
+						&& fieldValue.isJsonPrimitive()) {
+					JsonPrimitive jsonPrimitive = fieldValue.getAsJsonPrimitive();
+					if (jsonPrimitive.isNumber()) {
+						Number numberValue = jsonPrimitive.getAsNumber();
+						double doubleValue = numberValue.doubleValue();
+						fieldValue = new JsonPrimitive(doubleValue);
+					}
+				}
+				else if (customFieldValue.equals("Flagged") && !fieldValue.isJsonNull() && fieldValue.isJsonArray()) {
+					JsonArray jsonArray = fieldValue.getAsJsonArray();
+					if (!jsonArray.isJsonNull() && !jsonArray.isEmpty()) {
+						JsonElement targetField = jsonArray.get(jsonArray.size() - 1);
+						fieldValue = targetField.getAsJsonObject().get("value");
+					}
+				}
+				customFieldMap.put(customFieldKey, fieldValue);
+			}
+		}
+		return customFieldMap;
 	}
 
 	private String parseJiraJql(BoardType boardType, List<String> doneColumns, BoardRequestParam boardRequestParam) {
 		if (boardType == BoardType.JIRA) {
-			return String.format(
-					"status in ('%s') AND statusCategoryChangedDate >= %s AND statusCategoryChangedDate <= %s",
-					String.join("','", doneColumns), boardRequestParam.getStartTime(), boardRequestParam.getEndTime());
+			return String.format("status in ('%s') AND status changed during (%s, %s)", String.join("','", doneColumns),
+					boardRequestParam.getStartTime(), boardRequestParam.getEndTime());
 		}
-		else if (boardType == BoardType.CLASSIC_JIRA) {
+		else {
 			StringBuilder subJql = new StringBuilder();
 			for (int index = 0; index < doneColumns.size() - 1; index++) {
 				subJql.append(String.format("status changed to '%s' during (%s, %s) or ", doneColumns.get(index),
@@ -367,16 +479,12 @@ public class JiraService {
 						boardRequestParam.getStartTime(), boardRequestParam.getEndTime()));
 			return String.format("status in ('%s') AND (%s)", String.join("', '", doneColumns), subJql);
 		}
-		else {
-			throw new BadRequestException("boardType param is not correct");
-		}
 	}
 
-	private List<String> getAssigneeSet(URI baseUrl, JiraCard donecard, String jiraToken) {
-		log.info("Start to get jira card history, done card key: {}", donecard.getKey());
-		CardHistoryResponseDTO cardHistoryResponseDTO = jiraFeignClient.getJiraCardHistory(baseUrl, donecard.getKey(),
-				jiraToken);
-		log.info("Successfully get jira card history, done card key: {},card history items size: {}", donecard.getKey(),
+	private List<String> getAssigneeSet(URI baseUrl, JiraCard jiraCard, String jiraToken) {
+		log.info("Start to get jira card history, _cardKey: {}", jiraCard.getKey());
+		CardHistoryResponseDTO cardHistoryResponseDTO = getJiraCardHistory(baseUrl, jiraCard.getKey(), 0, jiraToken);
+		log.info("Successfully get jira card history, _cardKey: {}, _cardHistoryItemsSize: {}", jiraCard.getKey(),
 				cardHistoryResponseDTO.getItems().size());
 
 		List<String> assigneeSet = cardHistoryResponseDTO.getItems()
@@ -388,11 +496,11 @@ public class JiraService {
 
 		log.info("[assigneeSet] assigneeSet.isEmpty():{}", assigneeSet.isEmpty());
 
-		if (assigneeSet.isEmpty() && nonNull(donecard.getFields().getAssignee())
-				&& nonNull(donecard.getFields().getAssignee().getDisplayName())) {
-			return List.of(donecard.getFields().getAssignee().getDisplayName());
+		if (assigneeSet.isEmpty() && nonNull(jiraCard.getFields().getAssignee())
+				&& nonNull(jiraCard.getFields().getAssignee().getDisplayName())) {
+			return List.of(jiraCard.getFields().getAssignee().getDisplayName());
 		}
-		log.info("Successfully get assigneeSet:{}", assigneeSet);
+		log.info("Successfully get _assigneeSet:{}", assigneeSet);
 		return assigneeSet;
 	}
 
@@ -401,13 +509,13 @@ public class JiraService {
 	}
 
 	private List<TargetField> getTargetField(URI baseUrl, BoardRequestParam boardRequestParam) {
-		log.info("Start to get target field, project key: {}, board id: {},", boardRequestParam.getProjectKey(),
+		log.info("Start to get target field, _projectKey: {}, _boardId: {},", boardRequestParam.getProjectKey(),
 				boardRequestParam.getBoardId());
 		FieldResponseDTO fieldResponse = jiraFeignClient.getTargetField(baseUrl, boardRequestParam.getProjectKey(),
 				boardRequestParam.getToken());
 
 		if (isNull(fieldResponse) || fieldResponse.getProjects().isEmpty()) {
-			throw new NoContentException("There is no target field.");
+			throw new PermissionDenyException("There is no enough permission.");
 		}
 
 		List<Issuetype> issueTypes = fieldResponse.getProjects().get(0).getIssuetypes();
@@ -415,7 +523,7 @@ public class JiraService {
 			.flatMap(issuetype -> getTargetIssueField(issuetype.getFields()).stream())
 			.distinct()
 			.toList();
-		log.info("Successfully get target field, project key: {}, board id: {}, target fields size: {},",
+		log.info("Successfully get _targetField, _projectKey: {}, _boardId: {}, _targetFieldsSize: {},",
 				boardRequestParam.getProjectKey(), boardRequestParam.getBoardId(), targetFields.size());
 		return targetFields;
 	}
@@ -423,39 +531,32 @@ public class JiraService {
 	private List<TargetField> getTargetIssueField(Map<String, IssueField> fields) {
 		return fields.values()
 			.stream()
-			.filter(issueField -> !FIELDS_IGNORE.contains(issueField.getKey()))
 			.map(issueField -> new TargetField(issueField.getKey(), issueField.getName(), false))
-			.collect(Collectors.toList());
+			.toList();
 	}
 
-	private List<JiraCardDTO> getMatchedCards(StoryPointsAndCycleTimeRequest request,
+	private List<JiraCardDTO> getRealDoneCards(StoryPointsAndCycleTimeRequest request,
 			List<RequestJiraBoardColumnSetting> boardColumns, List<String> users, URI baseUrl,
-			List<JiraCard> allDoneCards, List<TargetField> targetFields) {
-		CardCustomFieldKey cardCustomFieldKey = covertCustomFieldKey(targetFields);
-		String keyFlagged = cardCustomFieldKey.getFlagged();
-		List<JiraCardDTO> matchedCards = new ArrayList<>();
-		List<CompletableFuture<JiraCard>> futures = allDoneCards.stream()
-			.map(jiraCard -> CompletableFuture.supplyAsync(() -> {
-				CardHistoryResponseDTO jiraCardHistory = jiraFeignClient.getJiraCardHistory(baseUrl, jiraCard.getKey(),
-						request.getToken());
-				if (isDoneCardByHistory(jiraCardHistory)) {
-					return jiraCard;
-				}
-				else {
-					return null;
-				}
-			}))
-			.toList();
-		List<JiraCard> jiraCards = futures.stream().map(CompletableFuture::join).filter(Objects::nonNull).toList();
+			List<JiraCard> allDoneCards, List<TargetField> targetFields, String filterMethod) {
 
-		jiraCards.forEach(doneCard -> {
-			CycleTimeInfoDTO cycleTimeInfoDTO = getCycleTime(baseUrl, doneCard.getKey(), request.getToken(),
-					request.isTreatFlagCardAsBlock(), keyFlagged);
-			List<String> assigneeSet = new ArrayList<>(getAssigneeSet(baseUrl, doneCard, request.getToken()));
-			if (doneCard.getFields().getAssignee() != null
-					&& doneCard.getFields().getAssignee().getDisplayName() != null) {
-				assigneeSet.add(doneCard.getFields().getAssignee().getDisplayName());
+		CardCustomFieldKey cardCustomFieldKey = covertCustomFieldKey(targetFields, request.getOverrideFields());
+		String keyFlagged = cardCustomFieldKey.getFlagged();
+		List<JiraCardDTO> realDoneCards = new ArrayList<>();
+		List<JiraCard> jiraCards = new ArrayList<>();
+
+		for (JiraCard allDoneCard : allDoneCards) {
+			CardHistoryResponseDTO jiraCardHistory = getJiraCardHistory(baseUrl, allDoneCard.getKey(), 0,
+					request.getToken());
+			if (isRealDoneCardByHistory(jiraCardHistory, request, allDoneCard)) {
+				jiraCards.add(allDoneCard);
 			}
+		}
+		jiraCards.forEach(doneCard -> {
+			CardHistoryResponseDTO cardHistoryResponseDTO = getJiraCardHistory(baseUrl, doneCard.getKey(), 0,
+					request.getToken());
+			CycleTimeInfoDTO cycleTimeInfoDTO = getCycleTime(cardHistoryResponseDTO, request.isTreatFlagCardAsBlock(),
+					keyFlagged, request.getStatus());
+			List<String> assigneeSet = getAssigneeSet(cardHistoryResponseDTO, filterMethod, doneCard);
 			if (users.stream().anyMatch(assigneeSet::contains)) {
 				JiraCardDTO jiraCardDTO = JiraCardDTO.builder()
 					.baseInfo(doneCard)
@@ -464,37 +565,108 @@ public class JiraService {
 					.cardCycleTime(calculateCardCycleTime(doneCard.getKey(), cycleTimeInfoDTO.getCycleTimeInfos(),
 							boardColumns))
 					.build();
-				matchedCards.add(jiraCardDTO);
+				realDoneCards.add(jiraCardDTO);
 			}
 		});
-		return matchedCards;
+		return realDoneCards;
 	}
 
-	private boolean isDoneCardByHistory(CardHistoryResponseDTO jiraCardHistory) {
-		HistoryDetail detail = jiraCardHistory.getItems()
+	private List<String> getAssigneeSet(CardHistoryResponseDTO jiraCardHistory, String assigneeFilter,
+			JiraCard doneCard) {
+		List<String> assigneeSet = new ArrayList<>();
+		Assignee assignee = doneCard.getFields().getAssignee();
+
+		if (useLastAssignee(assigneeFilter)) {
+			if (assignee != null) {
+				assigneeSet.add(assignee.getDisplayName());
+			}
+			else {
+				List<String> historicalAssignees = getHistoricalAssignees(jiraCardHistory);
+				assigneeSet.add(getLastHistoricalAssignee(historicalAssignees));
+			}
+		}
+		else {
+			List<String> historicalAssignees = getHistoricalAssignees(jiraCardHistory);
+			assigneeSet.addAll(historicalAssignees);
+		}
+
+		return assigneeSet;
+	}
+
+	private String getLastHistoricalAssignee(List<String> historicalAssignees) {
+		return historicalAssignees.stream().filter(Objects::nonNull).findFirst().orElse(null);
+	}
+
+	private List<String> getHistoricalAssignees(CardHistoryResponseDTO jiraCardHistory) {
+		return jiraCardHistory.getItems()
 			.stream()
-			.filter(historyDetail -> STATUS_FIELD_ID.equals(historyDetail.getFieldId()))
-			.reduce((pre, next) -> next)
-			.orElse(null);
-		if (detail == null) {
+			.filter(item -> AssigneeFilterMethod.ASSIGNEE_FIELD_ID.getDescription().equalsIgnoreCase(item.getFieldId()))
+			.sorted(Comparator.comparing(HistoryDetail::getTimestamp).reversed())
+			.map(item -> item.getTo().getDisplayValue())
+			.distinct()
+			.toList();
+	}
+
+	private CardHistoryResponseDTO getJiraCardHistory(URI baseUrl, String cardKey, int startAt, String token) {
+		int queryCount = 100;
+		CardHistoryResponseDTO jiraCardHistory = jiraFeignClient.getJiraCardHistoryByCount(baseUrl, cardKey, startAt,
+				queryCount, token);
+		if (Boolean.FALSE.equals(jiraCardHistory.getIsLast())) {
+			CardHistoryResponseDTO cardAllHistory = getJiraCardHistory(baseUrl, cardKey, startAt + queryCount, token);
+			jiraCardHistory.getItems().addAll(cardAllHistory.getItems());
+			jiraCardHistory.setIsLast(jiraCardHistory.getIsLast());
+		}
+		return jiraCardHistory;
+	}
+
+	private boolean useLastAssignee(String assigneeFilter) {
+		return assigneeFilter.equals(AssigneeFilterMethod.LAST_ASSIGNEE.getDescription())
+				|| StringUtils.isEmpty(assigneeFilter);
+	}
+
+	private boolean isRealDoneCardByHistory(CardHistoryResponseDTO jiraCardHistory,
+			StoryPointsAndCycleTimeRequest request, JiraCard allDoneCard) {
+		List<String> realDoneStatuses = request.getStatus().stream().map(String::toUpperCase).toList();
+		long validStartTime = parseLong(request.getStartTime());
+		long validEndTime = parseLong(request.getEndTime());
+
+		Optional<Long> moveUndoneLastTime = jiraCardHistory.getItems()
+			.stream()
+			.filter(history -> STATUS_FIELD_ID.equals(history.getFieldId()))
+			.filter(history -> realDoneStatuses.contains(history.getFrom().getDisplayValue().toUpperCase()))
+			.filter(history -> !realDoneStatuses.contains(history.getTo().getDisplayValue().toUpperCase()))
+			.map(HistoryDetail::getTimestamp)
+			.filter(time -> time >= validStartTime && time <= validEndTime)
+			.max(Long::compareTo);
+
+		Optional<HistoryDetail> realDoneHistory = jiraCardHistory.getItems()
+			.stream()
+			.filter(history -> STATUS_FIELD_ID.equals(history.getFieldId()))
+			.filter(history -> !realDoneStatuses.contains(history.getFrom().getDisplayValue().toUpperCase()))
+			.filter(history -> realDoneStatuses.contains(history.getTo().getDisplayValue().toUpperCase()))
+			.filter(history -> history.getTimestamp() >= validStartTime && history.getTimestamp() <= validEndTime)
+			.filter(history -> history.getTimestamp() > moveUndoneLastTime.orElse(0L))
+			.findFirst();
+
+		if (realDoneHistory.isPresent()) {
+			if (nonNull(allDoneCard.getFields().getStatus())) {
+				allDoneCard.getFields().getStatus().setName(realDoneHistory.get().getTo().getDisplayValue());
+				allDoneCard.getFields().setLastStatusChangeDate(realDoneHistory.get().getTimestamp());
+			}
+			return true;
+		}
+		else {
 			return false;
 		}
-		String displayName = detail.getTo().getDisplayName();
-		return CardStepsEnum.DONE.getValue().equalsIgnoreCase(displayName)
-				|| CardStepsEnum.CLOSED.getValue().equalsIgnoreCase(displayName);
 	}
 
-	private CycleTimeInfoDTO getCycleTime(URI baseUrl, String doneCardKey, String token, Boolean treatFlagCardAsBlock,
-			String keyFlagged) {
-		CardHistoryResponseDTO cardHistoryResponseDTO = jiraFeignClient.getJiraCardHistory(baseUrl, doneCardKey, token);
+	private CycleTimeInfoDTO getCycleTime(CardHistoryResponseDTO cardHistoryResponseDTO, Boolean treatFlagCardAsBlock,
+			String keyFlagged, List<String> realDoneStatus) {
 		List<StatusChangedItem> statusChangedArray = putStatusChangeEventsIntoAnArray(cardHistoryResponseDTO,
-				treatFlagCardAsBlock, keyFlagged);
-		List<StatusChangedItem> statusChangeArrayWithoutFlag = putStatusChangeEventsIntoAnArray(cardHistoryResponseDTO,
-				true, keyFlagged);
-		List<StatusChangedItem> statusChangedItems = boardUtil.reformTimeLineForFlaggedCards(statusChangedArray);
-		List<CycleTimeInfo> cycleTimeInfos = boardUtil.getCardTimeForEachStep(statusChangedItems);
-		List<CycleTimeInfo> originCycleTimeInfos = boardUtil
-			.getCardTimeForEachStep(boardUtil.reformTimeLineForFlaggedCards(statusChangeArrayWithoutFlag));
+				keyFlagged);
+		List<CycleTimeInfo> cycleTimeInfos = boardUtil.getCycleTimeInfos(statusChangedArray, realDoneStatus,
+				treatFlagCardAsBlock);
+		List<CycleTimeInfo> originCycleTimeInfos = boardUtil.getOriginCycleTimeInfos(statusChangedArray);
 
 		return CycleTimeInfoDTO.builder()
 			.cycleTimeInfos(cycleTimeInfos)
@@ -503,7 +675,7 @@ public class JiraService {
 	}
 
 	private List<StatusChangedItem> putStatusChangeEventsIntoAnArray(CardHistoryResponseDTO jiraCardHistory,
-			Boolean treatFlagCardAsBlock, String keyFlagged) {
+			String keyFlagged) {
 		List<StatusChangedItem> statusChangedArray = new ArrayList<>();
 		List<HistoryDetail> statusActivities = jiraCardHistory.getItems()
 			.stream()
@@ -525,7 +697,7 @@ public class JiraService {
 					.build()));
 		}
 
-		if (treatFlagCardAsBlock && keyFlagged != null) {
+		if (keyFlagged != null) {
 			jiraCardHistory.getItems()
 				.stream()
 				.filter(activity -> keyFlagged.equals(activity.getFieldId()))
@@ -557,7 +729,7 @@ public class JiraService {
 		double total = 0;
 		for (CycleTimeInfo cycleTimeInfo : cycleTimeInfos) {
 			String swimLane = cycleTimeInfo.getColumn();
-			if (swimLane.equals("FLAG")) {
+			if (swimLane.equalsIgnoreCase(CardStepsEnum.BLOCK.getValue())) {
 				boardMap.put(swimLane, CardStepsEnum.BLOCK);
 			}
 			if (boardMap.containsKey(swimLane)) {
@@ -583,6 +755,7 @@ public class JiraService {
 						stepsDay.setReview(stepsDay.getReview() + cycleTimeInfo.getDay());
 						total += cycleTimeInfo.getDay();
 					}
+					case ANALYSE -> stepsDay.setAnalyse(stepsDay.getAnalyse() + cycleTimeInfo.getDay());
 					default -> {
 					}
 				}
@@ -591,7 +764,7 @@ public class JiraService {
 		return CardCycleTime.builder().name(cardId).steps(stepsDay).total(total).build();
 	}
 
-	private CardCustomFieldKey covertCustomFieldKey(List<TargetField> model) {
+	private CardCustomFieldKey covertCustomFieldKey(List<TargetField> model, List<TargetField> overrideFields) {
 		CardCustomFieldKey cardCustomFieldKey = CardCustomFieldKey.builder().build();
 		for (TargetField value : model) {
 			String lowercaseName = value.getName().toLowerCase();
@@ -600,14 +773,43 @@ public class JiraService {
 				case "sprint" -> cardCustomFieldKey.setSprint(value.getKey());
 				case "flagged" -> cardCustomFieldKey.setFlagged(value.getKey());
 				default -> {
-
 				}
 			}
+		}
+		if (!CollectionUtils.isEmpty(overrideFields)) {
+
+			String storyPointsKey = overrideFields.stream()
+				.filter(targetField -> ("story points").equalsIgnoreCase(targetField.getName()))
+				.map(TargetField::getKey)
+				.filter(key -> !key.isEmpty())
+				.findFirst()
+				.orElse("");
+
+			String flaggedKey = overrideFields.stream()
+				.filter(targetField -> ("flagged").equalsIgnoreCase(targetField.getName()))
+				.map(TargetField::getKey)
+				.filter(key -> !key.isEmpty())
+				.findFirst()
+				.orElse("");
+
+			if (!storyPointsKey.isEmpty()) {
+				cardCustomFieldKey.setStoryPoints(storyPointsKey);
+				cardCustomFieldKey
+					.setInTargetField(model.stream().map(TargetField::getKey).toList().contains(storyPointsKey));
+			}
+			if (!flaggedKey.isEmpty()) {
+				cardCustomFieldKey.setFlagged(flaggedKey);
+			}
+		}
+		Map<String, String> envMap = systemUtil.getEnvMap();
+		if (Objects.nonNull(envMap.get(STORY_POINT_KEY))) {
+			cardCustomFieldKey.setStoryPoints(envMap.get(STORY_POINT_KEY));
 		}
 		return cardCustomFieldKey;
 	}
 
-	public CardCollection getStoryPointsAndCycleTimeForNonDoneCards(StoryPointsAndCycleTimeRequest request) {
+	public CardCollection getStoryPointsAndCycleTimeForNonDoneCards(StoryPointsAndCycleTimeRequest request,
+			List<RequestJiraBoardColumnSetting> boardColumns, List<String> users) {
 		URI baseUrl = urlGenerator.getUri(request.getSite());
 		BoardRequestParam boardRequestParam = BoardRequestParam.builder()
 			.boardId(request.getBoardId())
@@ -618,17 +820,18 @@ public class JiraService {
 			.endTime(request.getEndTime())
 			.build();
 
-		List<JiraCard> allNonDoneCards = getAllNonDoneCardsForActiveSprint(baseUrl, request.getStatus(),
-				boardRequestParam)
-			.getJiraCards();
-		if (allNonDoneCards.isEmpty()) {
-			allNonDoneCards = getAllNonDoneCardsForKanBan(baseUrl, request.getStatus(), boardRequestParam)
-				.getJiraCards();
+		JiraCardWithFields jiraCardWithFields = getAllNonDoneCardsForActiveSprint(baseUrl, request.getStatus(),
+				boardRequestParam, request.getOverrideFields());
+
+		if (jiraCardWithFields.getJiraCards().isEmpty()) {
+			jiraCardWithFields = getAllNonDoneCardsForKanBan(baseUrl, request.getStatus(), boardRequestParam,
+					request.getOverrideFields());
 		}
 
-		List<JiraCardDTO> matchedNonCards = getMatchedNonCards(allNonDoneCards);
-		int storyPointSum = matchedNonCards.stream()
-			.mapToInt(card -> card.getBaseInfo().getFields().getStoryPoints())
+		List<JiraCardDTO> matchedNonCards = getMatchedNonDoneCards(request, boardColumns, users, baseUrl,
+				jiraCardWithFields.getJiraCards(), jiraCardWithFields.getTargetFields());
+		double storyPointSum = matchedNonCards.stream()
+			.mapToDouble(card -> card.getBaseInfo().getFields().getStoryPoints())
 			.sum();
 
 		return CardCollection.builder()
@@ -638,71 +841,124 @@ public class JiraService {
 			.build();
 	}
 
-	private List<JiraCardDTO> getMatchedNonCards(List<JiraCard> allNonDoneCards) {
-		List<JiraCardDTO> matchedNonCards = new ArrayList<>();
-		allNonDoneCards.forEach(doneCard -> {
+	private List<JiraCardDTO> getMatchedNonDoneCards(StoryPointsAndCycleTimeRequest request,
+			List<RequestJiraBoardColumnSetting> boardColumns, List<String> users, URI baseUrl,
+			List<JiraCard> allNonDoneCards, List<TargetField> targetFields) {
 
-			JiraCardDTO jiraCardDTO = JiraCardDTO.builder().baseInfo(doneCard).build();
-			matchedNonCards.add(jiraCardDTO);
+		List<JiraCardDTO> matchedCards = new ArrayList<>();
+		CardCustomFieldKey cardCustomFieldKey = covertCustomFieldKey(targetFields, request.getOverrideFields());
+		String keyFlagged = cardCustomFieldKey.getFlagged();
+
+		allNonDoneCards.forEach(card -> {
+			CardHistoryResponseDTO cardHistoryResponseDTO = getJiraCardHistory(baseUrl, card.getKey(), 0,
+					request.getToken());
+			CycleTimeInfoDTO cycleTimeInfoDTO = getCycleTime(cardHistoryResponseDTO, request.isTreatFlagCardAsBlock(),
+					keyFlagged, request.getStatus());
+
+			setLastStatusChangeTimeInCard(card, cardHistoryResponseDTO);
+			List<String> assigneeSet = getAssigneeSetWithDisplayName(baseUrl, card, request.getToken());
+			if (users.stream().anyMatch(assigneeSet::contains)) {
+				CardCycleTime cardCycleTime = calculateCardCycleTime(card.getKey(),
+						cycleTimeInfoDTO.getCycleTimeInfos(), boardColumns);
+
+				cardCycleTime.setTotal(0.0);
+
+				JiraCardDTO jiraCardDTO = buildJiraCardDTO(card, cycleTimeInfoDTO, cardCycleTime);
+				matchedCards.add(jiraCardDTO);
+			}
 		});
-		return matchedNonCards;
+		return matchedCards;
+	}
+
+	private void setLastStatusChangeTimeInCard(JiraCard card, CardHistoryResponseDTO cardHistoryResponseDTO) {
+		Optional<Long> lastStatusChangeTime = cardHistoryResponseDTO.getItems()
+			.stream()
+			.filter(history -> STATUS_FIELD_ID.equals(history.getFieldId()))
+			.map(HistoryDetail::getTimestamp)
+			.max(Long::compareTo);
+
+		if (lastStatusChangeTime.isPresent() && nonNull(card.getFields())) {
+			card.getFields().setLastStatusChangeDate(lastStatusChangeTime.get());
+		}
+	}
+
+	private List<String> getAssigneeSetWithDisplayName(URI baseUrl, JiraCard card, String token) {
+		List<String> assigneeSet = new ArrayList<>(getAssigneeSet(baseUrl, card, token));
+		if (card.getFields().getAssignee() != null && card.getFields().getAssignee().getDisplayName() != null) {
+			assigneeSet.add(card.getFields().getAssignee().getDisplayName());
+		}
+		return assigneeSet;
+	}
+
+	private JiraCardDTO buildJiraCardDTO(JiraCard card, CycleTimeInfoDTO cycleTimeInfoDTO,
+			CardCycleTime cardCycleTime) {
+		return JiraCardDTO.builder()
+			.baseInfo(card)
+			.cycleTime(cycleTimeInfoDTO.getCycleTimeInfos())
+			.originCycleTime(cycleTimeInfoDTO.getOriginCycleTimeInfos())
+			.cardCycleTime(cardCycleTime)
+			.build();
 	}
 
 	private JiraCardWithFields getAllNonDoneCardsForActiveSprint(URI baseUrl, List<String> status,
-			BoardRequestParam boardRequestParam) {
+			BoardRequestParam boardRequestParam, List<TargetField> overrideFields) {
 		String jql;
 		if (status.isEmpty()) {
-			jql = "sprint in openSprints() ";
+			jql = "sprint in openSprints() ORDER BY updated DESC";
 		}
 		else {
-			jql = "sprint in openSprints() AND status not in ('" + String.join("','", status) + "')";
+			jql = "sprint in openSprints() AND status not in ('" + String.join("','", status)
+					+ "') ORDER BY updated DESC";
 		}
 
-		return getCardList(baseUrl, boardRequestParam, jql, "nonDone");
+		return getCardList(baseUrl, boardRequestParam, jql, NONE_DONE_CARD_TAG, overrideFields,
+				NONE_DONE_MAX_QUERY_COUNT);
 	}
 
 	private JiraCardWithFields getAllNonDoneCardsForKanBan(URI baseUrl, List<String> status,
-			BoardRequestParam boardRequestParam) {
+			BoardRequestParam boardRequestParam, List<TargetField> overrideFields) {
 		String jql;
 		if (status.isEmpty()) {
-			jql = "";
+			jql = "ORDER BY updated DESC";
 		}
 		else {
-			jql = "status not in ('" + String.join("','", status) + "')";
+			jql = "status not in ('" + String.join("','", status) + "') ORDER BY updated DESC";
 		}
-		return getCardList(baseUrl, boardRequestParam, jql, "nonDone");
+		return getCardList(baseUrl, boardRequestParam, jql, NONE_DONE_CARD_TAG, overrideFields,
+				NONE_DONE_MAX_QUERY_COUNT);
 	}
 
 	private JiraCardWithFields getCardList(URI baseUrl, BoardRequestParam boardRequestParam, String jql,
-			String cardType) {
-		log.info("Start to get first-page xxx card information form kanban, param {}", cardType);
-		String allCardResponse = jiraFeignClient.getAllDoneCards(baseUrl, boardRequestParam.getBoardId(), QUERY_COUNT,
-				0, jql, boardRequestParam.getToken());
+			String cardType, List<TargetField> overrideFields, int queryCount) {
+		log.info("Start to get first-page xxx card information form kanban, _param {}", cardType);
+		String allCardResponse = jiraFeignClient.getJiraCards(baseUrl, boardRequestParam.getBoardId(), queryCount, 0,
+				jql, boardRequestParam.getToken());
 		if (allCardResponse.isEmpty()) {
 			return JiraCardWithFields.builder().jiraCards(Collections.emptyList()).build();
 		}
-		log.info("Successfully get first-page xxx card information form kanban, param {}", cardType);
+		log.info("Successfully get first-page xxx card information form kanban, _param {}", cardType);
 
 		List<TargetField> targetField = getTargetField(baseUrl, boardRequestParam);
-		AllDoneCardsResponseDTO allCardsResponseDTO = formatAllDoneCards(allCardResponse, targetField);
+		AllCardsResponseDTO allCardsResponseDTO = formatAllCards(allCardResponse, targetField, overrideFields);
 
-		List<JiraCard> cards = new ArrayList<>(new HashSet<>(allCardsResponseDTO.getIssues()));
+		List<JiraCard> cards = new ArrayList<>(new LinkedHashSet<>(allCardsResponseDTO.getIssues()));
 		int pages = (int) Math.ceil(Double.parseDouble(allCardsResponseDTO.getTotal()) / QUERY_COUNT);
-		if (pages <= 1) {
+		if (cardType.equals(NONE_DONE_CARD_TAG) || pages <= 1) {
 			return JiraCardWithFields.builder().jiraCards(cards).targetFields(targetField).build();
 		}
 
-		log.info("Start to get more xxx card information form kanban, param {}", cardType);
+		log.info("Start to get more xxx card information form kanban, _param {}", cardType);
 		List<Integer> range = IntStream.rangeClosed(1, pages - 1).boxed().toList();
-		List<CompletableFuture<AllDoneCardsResponseDTO>> futures = range.stream()
-			.map(startFrom -> CompletableFuture.supplyAsync(
-					() -> (formatAllDoneCards(jiraFeignClient.getAllDoneCards(baseUrl, boardRequestParam.getBoardId(),
-							QUERY_COUNT, startFrom * QUERY_COUNT, jql, boardRequestParam.getToken()), targetField)),
-					customTaskExecutor))
+		List<CompletableFuture<AllCardsResponseDTO>> futures = range.stream()
+			.map(startFrom -> CompletableFuture
+				.supplyAsync(() -> (formatAllCards(
+						jiraFeignClient.getJiraCards(baseUrl, boardRequestParam.getBoardId(), QUERY_COUNT,
+								startFrom * QUERY_COUNT, jql, boardRequestParam.getToken()),
+						targetField, overrideFields)), customTaskExecutor))
 			.toList();
-		log.info("Successfully get more xxx card information form kanban, param {}", cardType);
+		log.info("Successfully get more xxx card information form kanban, _param {}", cardType);
 
-		List<AllDoneCardsResponseDTO> nonDoneCardsResponses = futures.stream().map(CompletableFuture::join).toList();
+		List<AllCardsResponseDTO> nonDoneCardsResponses = futures.stream().map(CompletableFuture::join).toList();
 		List<JiraCard> moreNonDoneCards = nonDoneCardsResponses.stream()
 			.flatMap(moreDoneCardsResponses -> moreDoneCardsResponses.getIssues().stream())
 			.toList();
@@ -714,9 +970,9 @@ public class JiraService {
 	}
 
 	public JiraBoardConfigDTO getJiraBoardConfig(URI baseUrl, String boardId, String token) {
-		log.info("Start to get configuration for board, board id: {}", boardId);
+		log.info("Start to get configuration for board, _boardId: {}", boardId);
 		JiraBoardConfigDTO jiraBoardConfigDTO = jiraFeignClient.getJiraBoardConfiguration(baseUrl, boardId, token);
-		log.info("Successfully get configuration for board, name: {}, column size: {}", jiraBoardConfigDTO.getName(),
+		log.info("Successfully get configuration for board, _name: {}, _columnSize: {}", jiraBoardConfigDTO.getName(),
 				jiraBoardConfigDTO.getColumnConfig().getColumns().size());
 		return jiraBoardConfigDTO;
 	}
