@@ -2,75 +2,47 @@ package heartbeat.service.source.github;
 
 import heartbeat.client.GitHubFeignClient;
 import heartbeat.client.dto.codebase.github.CommitInfo;
-import heartbeat.client.dto.codebase.github.GitHubOrganizationsInfo;
-import heartbeat.client.dto.codebase.github.GitHubRepo;
 import heartbeat.client.dto.codebase.github.LeadTime;
 import heartbeat.client.dto.codebase.github.PipelineLeadTime;
 import heartbeat.client.dto.codebase.github.PullRequestInfo;
 import heartbeat.client.dto.pipeline.buildkite.DeployInfo;
 import heartbeat.client.dto.pipeline.buildkite.DeployTimes;
-import heartbeat.controller.source.dto.GitHubResponse;
 import heartbeat.exception.BaseException;
 import heartbeat.exception.InternalServerErrorException;
+import heartbeat.exception.NotFoundException;
+import heartbeat.exception.PermissionDenyException;
 import heartbeat.service.source.github.model.PipelineInfoOfRepository;
 import heartbeat.util.GithubUtil;
-import jakarta.annotation.PreDestroy;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.log4j.Log4j2;
+import org.springframework.stereotype.Service;
 
 import java.time.Instant;
-import java.util.Collection;
-import java.util.LinkedHashSet;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
+import java.util.Objects;
+import java.util.Collections;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
-
-import lombok.RequiredArgsConstructor;
-import lombok.extern.log4j.Log4j2;
-import org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor;
-import org.springframework.stereotype.Service;
 
 @Service
 @RequiredArgsConstructor
 @Log4j2
 public class GitHubService {
 
-	private final ThreadPoolTaskExecutor customTaskExecutor;
+	public static final String TOKEN_TITLE = "token ";
+
+	public static final String BEARER_TITLE = "Bearer ";
 
 	private final GitHubFeignClient gitHubFeignClient;
 
-	@PreDestroy
-	public void shutdownExecutor() {
-		customTaskExecutor.shutdown();
-	}
-
-	public GitHubResponse verifyToken(String githubToken) {
+	public void verifyToken(String githubToken) {
 		try {
-			String token = "token " + githubToken;
-			log.info("Start to query repository url by token");
-			CompletableFuture<List<GitHubRepo>> githubReposByUserFuture = CompletableFuture
-				.supplyAsync(() -> gitHubFeignClient.getAllRepos(token), customTaskExecutor);
-
-			log.info("Start to query organizations by token");
-			CompletableFuture<List<GitHubOrganizationsInfo>> githubOrganizationsFuture = CompletableFuture
-				.supplyAsync(() -> gitHubFeignClient.getGithubOrganizationsInfo(token), customTaskExecutor);
-
-			return githubReposByUserFuture
-				.thenCombineAsync(githubOrganizationsFuture, (githubReposByUser, githubOrganizations) -> {
-					log.info("Successfully get repository by token, githubReposByUser size: {}",
-							githubReposByUser.size());
-					log.info("Successfully get organizations by token, githubOrganizations: {}", githubOrganizations);
-					List<String> githubReposMapped = githubReposByUser.stream().map(GitHubRepo::getHtmlUrl).toList();
-					LinkedHashSet<String> githubRepos = new LinkedHashSet<>(githubReposMapped);
-					CompletableFuture<Set<String>> githubReposByOrganizations = getAllGitHubReposAsync(token,
-							githubOrganizations);
-					Set<String> allGitHubRepos = githubReposByOrganizations.join();
-					log.info("Successfully get all repositories by token, repos size: {}", allGitHubRepos.size());
-					githubRepos.addAll(allGitHubRepos);
-					return GitHubResponse.builder().githubRepos(githubRepos).build();
-				}, customTaskExecutor)
-				.join();
+			String token = TOKEN_TITLE + githubToken;
+			log.info("Start to request github with token");
+			gitHubFeignClient.verifyToken(token);
+			log.info("Successfully verify token from github");
 		}
 		catch (RuntimeException e) {
 			Throwable cause = Optional.ofNullable(e.getCause()).orElse(e);
@@ -83,31 +55,32 @@ public class GitHubService {
 		}
 	}
 
-	private CompletableFuture<Set<String>> getAllGitHubReposAsync(String token,
-			List<GitHubOrganizationsInfo> gitHubOrganizations) {
-		List<CompletableFuture<List<String>>> repoFutures = gitHubOrganizations.stream()
-			.map(GitHubOrganizationsInfo::getLogin)
-			.map(org -> CompletableFuture.supplyAsync(() -> {
-				log.info("Start to query repository by organization: {}", org);
-				List<String> repos = gitHubFeignClient.getReposByOrganizationName(org, token)
-					.stream()
-					.map(GitHubRepo::getHtmlUrl)
-					.toList();
-				log.info("Successfully query repository by organization: {}, repos size: {}", org, repos.size());
-				return repos;
-			}, customTaskExecutor))
-			.toList();
-		return CompletableFuture.allOf(repoFutures.toArray(new CompletableFuture[0]))
-			.thenApply(v -> repoFutures.stream()
-				.map(CompletableFuture::join)
-				.flatMap(Collection::stream)
-				.collect(Collectors.toSet()));
+	public void verifyCanReadTargetBranch(String repository, String branch, String githubToken) {
+		try {
+			String token = TOKEN_TITLE + githubToken;
+			log.info("Start to request github branch: {}", branch);
+			gitHubFeignClient.verifyCanReadTargetBranch(GithubUtil.getGithubUrlFullName(repository), branch, token);
+			log.info("Successfully verify target branch for github, branch: {}", branch);
+		}
+		catch (NotFoundException e) {
+			log.error("Failed to call GitHub with branch: {}, error: {} ", branch, e.getMessage());
+			throw new PermissionDenyException(String.format("Unable to read target branch: %s", branch));
+		}
+		catch (RuntimeException e) {
+			Throwable cause = Optional.ofNullable(e.getCause()).orElse(e);
+			log.error("Failed to call GitHub branch:{} with error: {} ", branch, cause.getMessage());
+			if (cause instanceof BaseException baseException) {
+				throw baseException;
+			}
+			throw new InternalServerErrorException(
+					String.format("Failed to call GitHub branch: %s with error: %s", branch, cause.getMessage()));
+		}
 	}
 
 	public List<PipelineLeadTime> fetchPipelinesLeadTime(List<DeployTimes> deployTimes,
 			Map<String, String> repositories, String token) {
 		try {
-			String realToken = "Bearer " + token;
+			String realToken = BEARER_TITLE + token;
 			List<PipelineInfoOfRepository> pipelineInfoOfRepositories = getInfoOfRepositories(deployTimes,
 					repositories);
 
@@ -123,7 +96,8 @@ public class GitHubService {
 						.allOf(leadTimeFutures.toArray(new CompletableFuture[0]))
 						.thenApply(v -> leadTimeFutures.stream()
 							.map(CompletableFuture::join)
-							.collect(Collectors.toList()));
+							.filter(Objects::nonNull)
+							.toList());
 
 					return allLeadTimesFuture.thenApply(leadTimes -> PipelineLeadTime.builder()
 						.pipelineName(item.getPipelineName())
@@ -133,7 +107,7 @@ public class GitHubService {
 				})
 				.toList();
 
-			return pipelineLeadTimeFutures.stream().map(CompletableFuture::join).collect(Collectors.toList());
+			return pipelineLeadTimeFutures.stream().map(CompletableFuture::join).toList();
 		}
 		catch (RuntimeException e) {
 			Throwable cause = Optional.ofNullable(e.getCause()).orElse(e);
@@ -149,21 +123,32 @@ public class GitHubService {
 
 	private List<CompletableFuture<LeadTime>> getLeadTimeFutures(String realToken, PipelineInfoOfRepository item) {
 		return item.getPassedDeploy().stream().map(deployInfo -> {
-			CompletableFuture<List<PullRequestInfo>> pullRequestInfoFuture = CompletableFuture
-				.supplyAsync(() -> gitHubFeignClient.getPullRequestListInfo(item.getRepository(),
-						deployInfo.getCommitId(), realToken));
+			CompletableFuture<List<PullRequestInfo>> pullRequestInfoFuture = CompletableFuture.supplyAsync(() -> {
+				try {
+					return gitHubFeignClient.getPullRequestListInfo(item.getRepository(), deployInfo.getCommitId(),
+							realToken);
+				}
+				catch (NotFoundException e) {
+					return Collections.emptyList();
+				}
+			});
 			return pullRequestInfoFuture
 				.thenApply(pullRequestInfos -> getLeadTimeByPullRequest(realToken, item, deployInfo, pullRequestInfos));
-		}).toList();
+		}).filter(Objects::nonNull).toList();
 	}
 
 	private List<PipelineInfoOfRepository> getInfoOfRepositories(List<DeployTimes> deployTimes,
 			Map<String, String> repositories) {
 		return deployTimes.stream().map(deployTime -> {
 			String repository = GithubUtil.getGithubUrlFullName(repositories.get(deployTime.getPipelineId()));
+			List<DeployInfo> validPassedDeploy = deployTime.getPassed() == null ? null
+					: deployTime.getPassed()
+						.stream()
+						.filter(deployInfo -> deployInfo.getJobName().equals(deployTime.getPipelineStep()))
+						.toList();
 			return PipelineInfoOfRepository.builder()
 				.repository(repository)
-				.passedDeploy(deployTime.getPassed())
+				.passedDeploy(validPassedDeploy)
 				.pipelineStep(deployTime.getPipelineStep())
 				.pipelineName(deployTime.getPipelineName())
 				.build();
@@ -172,38 +157,58 @@ public class GitHubService {
 
 	private LeadTime getLeadTimeByPullRequest(String realToken, PipelineInfoOfRepository item, DeployInfo deployInfo,
 			List<PullRequestInfo> pullRequestInfos) {
-		LeadTime noMergeDelayTime = parseNoMergeLeadTime(deployInfo);
-
+		LeadTime noPrLeadTime = parseNoMergeLeadTime(deployInfo, item, realToken);
 		if (pullRequestInfos.isEmpty()) {
-			return noMergeDelayTime;
+			return noPrLeadTime;
 		}
 
 		Optional<PullRequestInfo> mergedPull = pullRequestInfos.stream()
 			.filter(gitHubPull -> gitHubPull.getMergedAt() != null)
-			.findFirst();
+			.min(Comparator.comparing(PullRequestInfo::getNumber));
 
 		if (mergedPull.isEmpty()) {
-			return noMergeDelayTime;
+			return noPrLeadTime;
 		}
 
 		List<CommitInfo> commitInfos = gitHubFeignClient.getPullRequestCommitInfo(item.getRepository(),
 				mergedPull.get().getNumber().toString(), realToken);
 		CommitInfo firstCommitInfo = commitInfos.get(0);
+		if (!mergedPull.get().getMergeCommitSha().equals(deployInfo.getCommitId())) {
+			return noPrLeadTime;
+		}
 		return mapLeadTimeWithInfo(mergedPull.get(), deployInfo, firstCommitInfo);
 	}
 
-	private LeadTime parseNoMergeLeadTime(DeployInfo deployInfo) {
+	private LeadTime parseNoMergeLeadTime(DeployInfo deployInfo, PipelineInfoOfRepository item, String realToken) {
 		long jobFinishTime = Instant.parse(deployInfo.getJobFinishTime()).toEpochMilli();
 		long jobStartTime = Instant.parse(deployInfo.getJobStartTime()).toEpochMilli();
 		long pipelineCreateTime = Instant.parse(deployInfo.getPipelineCreateTime()).toEpochMilli();
+		long prLeadTime = 0;
+		long firstCommitTime;
+		CommitInfo commitInfo = new CommitInfo();
+		try {
+			commitInfo = gitHubFeignClient.getCommitInfo(item.getRepository(), deployInfo.getCommitId(), realToken);
+		}
+		catch (Exception e) {
+			log.error("Failed to get commit info_repoId: {},commitId: {}, error: {}", item.getRepository(),
+					deployInfo.getCommitId(), e.getMessage());
+		}
+
+		if (commitInfo.getCommit() != null && commitInfo.getCommit().getCommitter() != null
+				&& commitInfo.getCommit().getCommitter().getDate() != null) {
+			firstCommitTime = Instant.parse(commitInfo.getCommit().getCommitter().getDate()).toEpochMilli();
+		}
+		else {
+			firstCommitTime = jobStartTime;
+		}
 
 		return LeadTime.builder()
 			.commitId(deployInfo.getCommitId())
 			.pipelineCreateTime(pipelineCreateTime)
 			.jobFinishTime(jobFinishTime)
-			.pipelineDelayTime(jobFinishTime - jobStartTime)
-			.totalTime(jobFinishTime - jobStartTime)
-			.prDelayTime(0L)
+			.pipelineLeadTime(jobFinishTime - firstCommitTime)
+			.totalTime(jobFinishTime - firstCommitTime)
+			.prLeadTime(prLeadTime)
 			.build();
 	}
 
@@ -224,20 +229,25 @@ public class GitHubService {
 			firstCommitTimeInPr = 0;
 		}
 
-		long pipelineDelayTime = jobFinishTime - prMergedTime;
-		long prDelayTime;
+		long pipelineLeadTime = jobFinishTime - prMergedTime;
+		long prLeadTime;
 		long totalTime;
-		if (firstCommitTimeInPr > 0) {
-			prDelayTime = prMergedTime - firstCommitTimeInPr;
+		if (commitInfo.getCommit().getMessage().toLowerCase().startsWith("revert")) {
+			prLeadTime = 0;
 		}
 		else {
-			prDelayTime = prMergedTime - prCreatedTime;
+			if (firstCommitTimeInPr > 0) {
+				prLeadTime = prMergedTime - firstCommitTimeInPr;
+			}
+			else {
+				prLeadTime = prMergedTime - prCreatedTime;
+			}
 		}
-		totalTime = prDelayTime + pipelineDelayTime;
+		totalTime = prLeadTime + pipelineLeadTime;
 
 		return LeadTime.builder()
-			.pipelineDelayTime(pipelineDelayTime)
-			.prDelayTime(prDelayTime)
+			.pipelineLeadTime(pipelineLeadTime)
+			.prLeadTime(prLeadTime)
 			.firstCommitTimeInPr(firstCommitTimeInPr)
 			.prMergedTime(prMergedTime)
 			.totalTime(totalTime)
@@ -250,7 +260,7 @@ public class GitHubService {
 
 	public CommitInfo fetchCommitInfo(String commitId, String repositoryId, String token) {
 		try {
-			String realToken = "Bearer " + token;
+			String realToken = BEARER_TITLE + token;
 			log.info("Start to get commit info, repoId: {},commitId: {}", repositoryId, commitId);
 			CommitInfo commitInfo = gitHubFeignClient.getCommitInfo(repositoryId, commitId, realToken);
 			log.info("Successfully get commit info, repoId: {},commitId: {}, author: {}", repositoryId, commitId,
@@ -261,6 +271,9 @@ public class GitHubService {
 			Throwable cause = Optional.ofNullable(e.getCause()).orElse(e);
 			log.error("Failed to get commit info_repoId: {},commitId: {}, error: {}", repositoryId, commitId,
 					cause.getMessage());
+			if (cause instanceof NotFoundException) {
+				return null;
+			}
 			if (cause instanceof BaseException baseException) {
 				throw baseException;
 			}
